// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StateLabel > prefers the size prop over deprecated variant prop 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="small"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      data-size-small=""
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > renders children 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
    hi
  </span>
</div>
`;

exports[`StateLabel > respects the deprecated variant prop 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="small"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      data-size-small=""
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the deprecated variant prop 2`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the size prop 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="small"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      data-size-small=""
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the size prop 2`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 1`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueOpened"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-opened prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      />
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 2`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueClosed"
  >
    <svg
      aria-label="Issue"
      class="octicon octicon-issue-closed prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M11.28 6.78a.75.75 0 0 0-1.06-1.06L7.25 8.69 5.78 7.22a.75.75 0 0 0-1.06 1.06l2 2a.75.75 0 0 0 1.06 0l3.5-3.5Z"
      />
      <path
        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0Zm-1.5 0a6.5 6.5 0 1 0-13 0 6.5 6.5 0 0 0 13 0Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 3`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="issueClosedNotPlanned"
  >
    <svg
      aria-label="Issue, not planned"
      class="octicon octicon-skip prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Zm9.78-2.22-5.5 5.5a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734l5.5-5.5a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 4`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="pullMerged"
  >
    <svg
      aria-label="Pull request"
      class="octicon octicon-git-merge prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M5.45 5.154A4.25 4.25 0 0 0 9.25 7.5h1.378a2.251 2.251 0 1 1 0 1.5H9.25A5.734 5.734 0 0 1 5 7.123v3.505a2.25 2.25 0 1 1-1.5 0V5.372a2.25 2.25 0 1 1 1.95-.218ZM4.25 13.5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm8.5-4.5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5ZM5 3.25a.75.75 0 1 0 0 .005V3.25Z"
      />
    </svg>
  </span>
</div>
`;

exports[`StateLabel > respects the status prop 5`] = `
<div>
  <span
    class="prc-StateLabel-StateLabel-eEUJr"
    data-size="medium"
    data-status="pullQueued"
  >
    <svg
      aria-label="Pull request"
      class="octicon octicon-git-merge-queue prc-StateLabel-Icon-UdR1Y"
      display="inline-block"
      fill="currentColor"
      focusable="false"
      height="16"
      overflow="visible"
      role="img"
      style="vertical-align: text-bottom;"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M3.75 4.5a1.25 1.25 0 1 0 0-2.5 1.25 1.25 0 0 0 0 2.5ZM3 7.75a.75.75 0 0 1 1.5 0v2.878a2.251 2.251 0 1 1-1.5 0Zm.75 5.75a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm5-7.75a1.25 1.25 0 1 1-2.5 0 1.25 1.25 0 0 1 2.5 0Zm5.75 2.5a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-1.5 0a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Z"
      />
    </svg>
  </span>
</div>
`;
